2014-02-04  Kelly (KT) Thompson  <kgt@lanl.gov>

	* Release draco-6_10_0.  This is a minor Draco release.
	  https://rtt.lanl.gov/redmine/versions/19

	* This release was required by Jayenne and Capsaicin.  It is
	  linked to:
	  - Jayenne-7_3_0,   http://coder/redmine/versions/16
	  - Capsaicin-3_8_0, http://coder/redmine/versions/21

	* Platforms:
	  PI/ML/MP/MU/LU/TY  Intel 13.1.3    OpenMPI-1.6.3
	                     Intel 14.0.1    OpenMPI-1.6.3
	  CT/CI              Intel 13.1.3    MPICH2-5.6.4
	  SQ                 XLC   12.1      MPICH2-1.4

	* Summary of changes:
	  - 774 files changed, added or removed in 35 commits.
	  - In rng, replaced LFG with Counter_RNG.
	  - Increased functionality of memory diagnostics.

	* Details per package:

	Build System:
	* Eliminated versioning of the installed config directory.

	Developer Environment:
	* Provided improved bash support for ML, PI, MU, MP, LU, and TY.
	* Provided scripts for mirroring the repository to the red
	  network.
	* For coverage regression testing, other projects will now link
	  against the Debug (not Coverage) build of Draco.

	memory:
	  - Increase functionality of memory diagnostics options.

	rng:
	  - In rng, replaced LFG with Counter_RNG.
	  - Remove RNG_NR logic from rng.
            LFG used different generator parameters depending on whether
	    it was built in reproducible or non-reproducible mode.
	    Counter_RNG doesn't distinguish between reproducible and
	    non-reproducible builds, so setting RNG_NR in Draco (and
	    installing two side-by-side R/NR versions of Draco for every
	    release configuration) is no longer necessary.

	* Corrected defects:
	  Bug #314 Redmine SVN integration broken after repo upgrade to
	           version 1.8.
	  Bug #308 rng/uniform.hpp triggers error under Intel 14.
	  Bug #307 D690 - Ensure code builds and passes on ...
	  Bug #306 Release Draco-6_9_0.
	  Bug #240 Intel 13 generates incorrect code in rare cases.

	* New features:
	  (none)
