@@ -33,7 +33,28 @@ static double const N_EULER = 2.7182818284590452353602874;
 //    m - meters, kg - kilograms, s - seconds, K - kelvin
 //    W - watts, J - joules, C - coulombs, F - farads
 //    mol - mole
-    
+
+//---------------------------------------------------------------------------//
+// FUNDAMENTAL CONSTANTS                                                      
+//                                                                            
+// NIST Reference on Constants, Units and Uncertainty                         
+// CODATA internationally recommended values of the Fundamental Physical      
+// Constants, http://physics.nist.gov/cuu/Constants/                          
+//                                                                            
+// The units of these fundamental constants should be factors of 10X different
+// from the official NIST 2010 CODATA report data to allow for easy comparison
+// between these values and the NIST data.                                    
+//                                                                            
+// Fundamental constants are listed first.                                    
+// Derived constants are listed second.                                       
+// Actual data is placed in a user-defined type for C-interoperatbility.
+//
+//---------------------------------------------------------------------------//
+
+//! [c] SPEED OF LIGHT (M/S)
+// exact value by NIST definition
+static double const cLightSI          = 2.99792458e8;        // m s^-1
+
 //! [Na] AVOGADRO'S NUMBER ("entities"/MOLE)
 // Wikipedia (2013-12-3) == NIST Codata 2010
 static double const AVOGADRO          = 6.02214129e23;     // entities/mol
@@ -47,24 +68,45 @@ static double const planckSI          = 6.62606957e-34;    // J s
 static double const gasConstantSI     = 8.3144621;         // J/mol/K
 
 //! [k] BOLTZMANN'S CONSTANT == R/Na (JOULES/K)
+// If this changes you msut update the Enumerated Temperature Type in UnitSystemEnusm.hh!
 static double const boltzmannSI       = 1.380648800E-23;   // J K^-1
 
 //! [e] ELECTRON CHARGE (COULOMBS)
 // Wikipedia (2013-12-3) == NIST Codata 2010 (eps = 2.2e-8)
+// If this changes you msut update the Enumerated Temperature Type in UnitSystemEnusm.hh!
 static double const electronChargeSI  = 1.602176565e-19;    // Amp / sec
+
+//! [me] ELECTRON REST MASS (KG)	 s
+// Wikipedia (2013-12-3) == NIST Codata 2010 (eps = 4e-8)
+static double const electronMassSI    = 9.10938291e-31;        // kg
+
+//! [G] Gravitational Constant
+// Wikipedia (2013-12-3) == NIST Codata 2010 (eps = 1.2e-4)
+static double const gravitationalConstantSI = 6.67384e-11; // m^3/kg/s^2
+
+//! [g] Acceleration due to gravity (standard)
+// Wikipedia (2013-12-3)
+static double const accelerationFromGravitySI = 9.80665;     // m/s^2
+
+//! [mp] PROTON REST MASS (KG)
+// Wikipedia (2013-12-3) == NIST Codata 2010 (eps = 4.4e-8)
+static double const protonMassSI      = 1.672621777e-27;        // kg
+
+//---------------------------------------------------------------------------//
+// DERIVED CONSTANTS                                                          
+//  - constants derived from fundamental constants listed above               
+//  - constants with alternate units                                          
+//  - conversion factors                                                      
+//---------------------------------------------------------------------------//
 
 /*! \brief EV2K CONVERSION FACTOR FROM ELECTRON-VOLTS TO KELVIN (K/eV)
  *
  * (TEMPERATURE IN eV) * EV2K = (TEMPERATURE IN KELVIN)
  * 
  * If this number is changed, you must also update the conversion factor found
- * in UniSystemUnums.hh
+ * in UniSystemUnums.hh.
  */
 static double const EV2K              = electronChargeSI / boltzmannSI;
-
-//! [c] SPEED OF LIGHT (M/S)
-// exact value by NIST definition
-static double const cLightSI          = 2.99792458e8;        // m s^-1
 
 /*! [sigma] STEFAN-BOLTZMANN CONSTANT (WATTS/(M**2-K**4)
  *
@@ -74,16 +116,8 @@ static double const cLightSI          = 2.99792458e8;        // m s^-1
  * /f
  */
 static double const stefanBoltzmannSI =
-    2.0 * std::pow(PI,5) * std::pow(boltzmannSI,4)
-    / (15.0 * std::pow(planckSI,3) * std::pow(cLightSI,2) );
-
-//! [G] Gravitational Constant
-// Wikipedia (2013-12-3) == NIST Codata 2010 (eps = 1.2e-4)
-static double const gravitationalConstantSI = 6.67384e-11; // m^3/kg/s^2
-
-//! [g] Acceleration due to gravity (standard)
-// Wikipedia (2013-12-3)
-static double const accelerationFromGravitySI = 9.80665;     // m/s^2
+    static_cast<double>(2.0) * std::pow(PI,5) * std::pow(boltzmannSI,4)
+    / (static_cast<double>(15.0) * std::pow(planckSI,3) * std::pow(cLightSI,2) );
 
 //! [F] Faraday constant == Na * e
 static double const faradayConstantSI = AVOGADRO * electronChargeSI;
@@ -94,14 +128,6 @@ static double const permeabilityOfVacuumSI = 4.0 * PI * 1.0e-7; // Henry/m
 //! [epsi0] PERMITTIVITY OF FREE SPACE (F/M)
 static double const permittivityOfFreeSpaceSI =
     1.0 / permeabilityOfVacuumSI/cLightSI/cLightSI; // Coloumb^2/J/m
-
-//! [me] ELECTRON REST MASS (KG)	 s
-// Wikipedia (2013-12-3) == NIST Codata 2010 (eps = 4e-8)
-static double const electronMassSI    = 9.10938291e-31;        // kg
-
-//! [mp] PROTON REST MASS (KG)
-// Wikipedia (2013-12-3) == NIST Codata 2010 (eps = 4.4e-8)
-static double const protonMassSI      = 1.672621777e-27;        // kg
 
 //==============================================================================
 /*!
@@ -151,6 +177,7 @@ class DLL_PUBLIC PhysicalConstants
 
     //! accesses Avogadro's number (1/mole)
     static double avogadro()         { return AVOGADRO; }
+    
     //! see avogadro()
     static double Na()               { return avogadro(); }
 
@@ -265,6 +292,9 @@ class DLL_PUBLIC PhysicalConstants
     
     //! [mp] PROTON REST MASS (KG)
     double const d_protonMass;
+
+    double unit_convert_boltzmann( UnitSystem const & u ) const;
+    
     
 }; // end class PhysicalConstants
 
