@@ -121,7 +121,7 @@ void test_enumValues( rtt_dsxx::UnitTest & ut )
     }
 //---------------------------------------------------------------------------//
     {
-        double const keV2K(1.160451923e7);
+        double const keV2K(1.16045193028089e7);
 	int    const iSenVal(3);
 	double       adSenVal[iSenVal] = { 0.0, 1.0, 1.0/keV2K };
 	string const sSenVal( "NA,K,keV" );
